--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -38,6 +38,7 @@
         .leaflet-popup-content.media{
             width: auto!important;
             height: auto!important;
+            overflow: auto;
         }
         .leaflet-popup-content th {
             text-align: left;
@@ -94,6 +95,7 @@
         }
         .leaflet-control {
             box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4)!important;
+            border-radius: 4px;
         }
         .leaflet-touch .leaflet-control-layers,
         .leaflet-touch .leaflet-bar,
@@ -109,17 +111,17 @@
             border-top: none !important;
             color: black !important;
         }
-        .leaflet-control-search .search-button,
-        .leaflet-container .leaflet-control-search,
-        .leaflet-control-measure {
-            box-shadow: none !important;
-        }
         .leaflet-control-search .search-button {
             width: 30px !important;
             height: 30px !important;
             font-size: 13px !important;
             text-align: center !important;
-            line-height: 30px !important;
+            cursor: pointer;
+        }
+        .search-button.fa.fa-binoculars{
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .leaflet-control-measure .leaflet-control {
             width: 30px !important;
@@ -187,4 +189,9 @@
         }
         .leaflet-popup-pane {
             z-index: 700;
+        }
+        #gcd-button-control {
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
